Hide sample projects, enable buttons on table(but disabled), fix z-index of table

--- a/src/app/table/tbody/tbody.component.scss
+++ b/src/app/table/tbody/tbody.component.scss
@@ -7,7 +7,7 @@ mat-table{
 
 }
 mat-header-row{
-  z-index: 16;
+  z-index: 16!important;
   background-color: white;
 
 }
